kustomize/overlay/MusaEnv2/Musa-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: Musa
  labels:
    environmentId: env_c059217e-238e-4506-ac9b-9a298eb3b4d9
    projectId: project_e045038e-659d-446f-80a4-9ea25944f637
    projectName: newmusatestproject
    environmentName: musaenv2
    organizationId: org_214f8824-489e-4427-b043-83252b36ac2b
    goldilocks.fairwinds.com/enabled: 'true'
