kustomize/overlay/MusaEnv2/Musa-network-poilicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: Musa
  labels:
    organizationId: org_214f8824-489e-4427-b043-83252b36ac2b
    projectId: project_e045038e-659d-446f-80a4-9ea25944f637
    environmentId: env_c059217e-238e-4506-ac9b-9a298eb3b4d9
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_c059217e-238e-4506-ac9b-9a298eb3b4d9
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
